# simple-raytracer

./: 214rt.cpp  CMakeLists.txt  Makefile  README.md  bitmap.cpp  bitmap.hpp  fnobject.h  makefile  numeric.cpp  ray.h  resource.h  scene.cpp  stdafx.cpp  vec.cpp  vec.h
example-scenes/: demo.txt  demo_16_9.txt  demo_move_camera.txt  mirrors.txt  simple.txt
src/: 214rt.cpp  Bitmap.cpp  Bitmap.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Light.cpp  Light.hpp  Point3.hpp  Primitives.cpp  Primitives.hpp  Ray.hpp  Scene.cpp  Scene.hpp  Screen.cpp  Screen.hpp  Vector3.hpp  bitmap.cpp  bitmap.h  color.cpp  color.h  color.hpp  fnobject.h  intersect.cpp  intersect.h  light.cpp  light.h  main.cpp  numeric.cpp  numeric.h  ray.cpp  ray.h  scene.cpp  scene.h  vec.cpp  vec.h
src/driver/: CMakeLists.txt  Parser.cpp  Parser.hpp  main.cpp
src/libsrt/: Bitmap.cpp  Bitmap.hpp  CMakeLists.txt  Camera.cpp  Point3.hpp  Primitives.hpp  Scene.cpp  Scene.hpp  Screen.cpp  Screen.hpp  Vector3.hpp
tests/: BitmapTest.cpp  CMakeLists.txt  PlaneTest.cpp  PointTest.cpp  ScreenTest.cpp  SphereTest.cpp  VectorTest.cpp
